[tool.poetry]
name = "nlp_analyser"
version = "0.1.0"
description = ""
authors = ["Pierre Snell <pierre.snell@botpress.com>"]
readme = "README.md"
packages = [{include = "nlp_analyser"}]

[tool.poetry.scripts]
cli = "nlp_analyser.cli:cli"

[tool.poetry.dependencies]
python = ">=3.7.1, <3.8"
rich = "^11.1.0"
click = "^8.0.3"
pandas-profiling = "^3.1.0"
spacy = {version = "^3.2.1", extras = ["cuda113"]}
bertopic = "^0.9.4"
LanguageIdentifier = "^1.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
mypy = "^0.931"
black = "^22.1.0"
ipython = "<8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
