[tool.poetry]
name = "botpress_analyser"
version = "0.1.3"
description = "A package to make clusters from a corpus"
maintainers = ["Pierre Snell <ierezell@gmail.com>"]
authors = ["Pierre Snell <pierre.snell@botpress.com>"]
homepage = "https://botpress.com/"
repository = "https://github.com/botpress/solutions/tree/ps_revamp_nlu_testing/custom_tools/NLP_Analyser"
documentation = "https://github.com/botpress/solutions/tree/ps_revamp_nlu_testing/custom_tools/NLP_Analyser"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ['nlp', 'chatbot']
packages = [{include = "nlp_analyser"}]

[tool.poetry.scripts]
nlp_analyser = "nlp_analyser.cli:cli"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
numpy = "1.21.5"
numba = "0.55.1"
rich = "11.1.0"
click = "8.0.4"
pandas-profiling = "3.1.0"
spacy = "3.2.1"
bertopic = "0.9.4"
LanguageIdentifier = "1.1.1"
streamlit = "1.8.0"

[tool.poetry.group.dev.dependencies]
flake8 = "4.0.1"
mypy = "0.931"
black = "22.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
